[shaunak]added: cleaned up code for dev deployment

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -92,10 +92,10 @@
 
                   <div class="col-lg-8 col-sm-6">
                     <a style="text-decoration: none;" target="_blank"
-                      href="https://diy.ins.finizoninsurance.com/user/home/">
+                      href="https://diy.ins.finizoninsurance.com/user/home/" rel="noopener">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank" href="https://forms.gle/J1WexoLfsLAoMrAp7">
+                    <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/J1WexoLfsLAoMrAp7">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -128,11 +128,11 @@
 
                   <div class="col-lg-8 col-sm-6">
 
-                    <a style="text-decoration: none;" target="_blank"
+                    <a style="text-decoration: none;" target="_blank"  rel="noopener"
                       href="https://ins.finizoninsurance.com/partner/signup">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
+                    <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -167,10 +167,10 @@
               </div>
 
               <div class="col-lg-8 col-sm-6">
-                <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/client-login">
+                <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://wealth.finizon.com/client-login">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">SIGN IN</button>
                 </a>
-                <a style="text-decoration: none;" target="_blank"
+                <a style="text-decoration: none;" target="_blank"  rel="noopener"
                   href="https://docs.google.com/forms/d/e/1FAIpQLSejq8glfhwz7uxHZnSF7Tb6FflIaO7GovsH8Li5fDW76bcZHg/viewform">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">SIGN UP</button>
                 </a>
@@ -475,12 +475,12 @@
                 </div>
 
                 <div class="col-lg-8 col-sm-6">
-                  <a style="text-decoration: none;" target="_blank"
+                  <a style="text-decoration: none;" target="_blank"  rel="noopener"
                     href="https://ins.finizoninsurance.com/partner/signup">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                   </a>
 
-                  <a style="text-decoration: none;" target="_blank" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
+                  <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                   </a>
 
@@ -545,7 +545,7 @@
                       <div class="name">{{ selectedFounder.name }}</div>
                       <div class="designation">{{ selectedFounder.title }}</div>
                       <div class="bio">{{ selectedFounder.bio }}</div>
-                      <a href="{{selectedFounder.linkedinLink}}" target="_blank">
+                      <a href="{{selectedFounder.linkedinLink}}" target="_blank"  rel="noopener">
                         <img class="linkedin_logo" [src]="selectedFounder.linkedinImg" alt="LinkedIn Profile">
                       </a>
                     </div>
@@ -689,7 +689,9 @@
             <h3>Grow your family's investment in one place</h3>
           </div>
           <div class="col-lg-3 col-12 col-sm-3">
-            <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto" rel="noopener">Get Started</a>
+            <a href="http://65.1.237.83/" class="nav-link btn btn-primary theme-button m0-auto" rel="noopener">Get Started</a>
+
+            <!-- <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto" rel="noopener">Get Started</a> -->
           </div>
         </div>
       </div>
