--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -179,8 +179,10 @@
 
 			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
 
-				<a href="https://uatnw.finizon.com/" rel="noopener">www.finizon.com</a>
+				<a href="http://65.1.237.83/" rel="noopener">www.finizon.com</a>
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener">www.finizon.com</a> -->
 
+				http://65.1.237.83/
 
 				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
 
@@ -193,8 +195,8 @@
 
 
 				Investment Manager of the products offered through its platform
-				<!-- <a href="http://65.1.237.83/" rel="noopener">(www.Finizon.com)</a> -->
-				<a href="https://uatnw.finizon.com/" rel="noopener">(www.Finizon.com)</a>
+				<a href="http://65.1.237.83/" rel="noopener">(www.Finizon.com)</a>
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener">(www.Finizon.com)</a> -->
 
 
 
