--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -42,7 +42,7 @@
 	box-shadow: 0px 4px 8px #0000003d;
 	width: 290px;
 	text-align: center;
-	
+
 }
 
 .login-popup.show {
@@ -131,7 +131,8 @@
 	font-weight: 600;
 	margin-top: 8%;
 }
-.Banner{
+
+.Banner {
 	margin-top: 7rem !important;
 }
 
@@ -158,7 +159,7 @@
 	flex: 1;
 	width: 100%;
 	height: 100%;
-	
+
 	filter: brightness(50%);
 	max-width: 100px;
 	max-height: 100px;
@@ -168,17 +169,18 @@
 	border: 1px solid rgb(230, 227, 227);
 	cursor: pointer;
 }
+
 .selected-profile {
-	filter:none;
-  }
+	filter: none;
+}
 
 .profiling-team {
 	flex: 1;
 	margin-left: 22%;
 	margin-top: -40%;
-	
+
 	border-radius: 15px;
-	
+
 	background: linear-gradient(to top, #ececec, 20%, #ffff);
 
 }
@@ -187,7 +189,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
-	
+
 	height: 415px;
 }
 
@@ -261,102 +263,111 @@
 	flex: 0 0 auto;
 	margin-right: 10px;
 }
-.testimonialtext{
-    text-align: justify !important;
+
+.testimonialtext {
+	text-align: justify !important;
 }
 
 .money-mng {
 	text-align: center;
 	cursor: pointer;
 	margin-top: 10% !important;
-  }
-  
-  .money-mng img {
+}
+
+.money-mng img {
 	width: 35% !important;
-	
+	margin-top: 10px;
 	margin-bottom: 10px;
-  }
+}
 
-  .shopkeeper-insurance-width img {
+.shopkeeper-insurance-width img {
 	width: 5% !important;
-	border:2px solid black;
-  }
+	border: 2px solid black;
+}
 
-   .money-mng .shopkeeper_logo{
-	
+.money-mng .shopkeeper_logo {
+
 	width: 100px !important;
 	height: 80px;
-  }
+}
 
-  .title-mng {
+.title-mng {
 	text-align: center;
 	cursor: pointer;
 	margin-top: 10% !important;
-  }
+}
 
-  .product-name-container {
-	height:20px; 
-  }
-  .product-name-container p {
+.product-name-container {
+	height: 20px;
+}
+
+.product-name-container p {
 	color: #465A65;
 	font-size: 18px;
 	margin-top: -7%;
-  }
+}
 
-  
-  .money-mng p {
+
+.money-mng p {
 	margin-bottom: 0px;
 	color: #465A65;
-  }
-  .flow-row {
+}
+
+.flow-row {
 	flex-flow: row;
 	margin-top: 30px;
-  }
-  
-  
-  .flow-row .money-mng {
+}
+
+
+.flow-row .money-mng {
 	text-align: center;
 	width: auto;
 	margin: 1%;
-  }
-  .wealth img{
+}
+
+.wealth img {
 	height: 80px;
-  }
-  .monexo img{
+}
+
+.monexo img {
 	margin-top: -2px !important;
 	width: 40% !important;
 	height: 100px;
 
- }
+}
 
- .monexo p{
+.monexo p {
 	margin-top: -12px !important;
 
- }
- .shopkeeper img{
+}
+
+.shopkeeper img {
 	margin-top: 50px !important;
 	width: 40% !important;
 	height: 85px;
 
- }
- 
- .owl-theme .owl-dots {
-	/* Add your styles for the dots container here */
-  }
-  
-  .owl-theme .owl-dot {
+}
+
+
+.owl-theme .owl-dot {
 	/* Add your styles for the dots here */
-	background-color:  #00A0AD; /* Change to the desired color */
-	width: 10px; /* Set the width of the dots */
-	height: 10px; /* Set the height of the dots */
-	margin: 0 5px; /* Adjust the margin between dots */
-	border-radius: 50%; /* Make dots circular */
-  }
-  
-  .owl-theme .owl-dot.active {
+	background-color: #00A0AD;
+	/* Change to the desired color */
+	width: 10px;
+	/* Set the width of the dots */
+	height: 10px;
+	/* Set the height of the dots */
+	margin: 0 5px;
+	/* Adjust the margin between dots */
+	border-radius: 50%;
+	/* Make dots circular */
+}
+
+.owl-theme .owl-dot.active {
 	/* Style for active dot */
-	background-color:  #00A0AD !important; /* Change to the desired color for active dot */
-  }
+	background-color: #00A0AD !important;
+	/* Change to the desired color for active dot */
+}
 
 
 @media only screen and (max-width: 767px) {
@@ -421,7 +432,7 @@
 		margin-bottom: 25px;
 	}
 
-	
+
 
 	.profile {
 		display: block;
@@ -444,47 +455,50 @@
 		flex-direction: column;
 		padding: 30px;
 	}
+
 	.flex-row {
 		display: flex;
 		flex-wrap: wrap;
-	  }
-	
-	  .flex-row .col {
+	}
+
+	.flex-row .col {
 		flex-basis: 50%;
 		max-width: 50%;
-	  }
-	 
-	  .money-mng p {
+	}
+
+	.money-mng p {
 		font-size: 14px;
-	  }
-	
-	  .money-mng img {
+	}
+
+	.money-mng img {
 		width: 50% !important;
 		margin-top: 30% !important;
-	  }
-	 
-	  .money-mng {
+	}
+
+	.money-mng {
 		margin-bottom: 20px;
-	  }
-	  .monexo img{
+	}
+
+	.monexo img {
 		width: 70% !important;
 		height: 30% !important;
-		margin-top: 60%!important
+		margin-top: 60% !important
+	}
 
-	  }
-	 
-	 
-	  .product-name-container {
-		height:10px; 
-	  }
-	  .product-name-container p {
+
+	.product-name-container {
+		height: 10px;
+	}
+
+	.product-name-container p {
 		color: #465A65;
 		font-size: 12px;
 		margin-top: -25%;
-	  }
-	  .title-finizon{
+	}
+
+	.title-finizon {
 		margin-top: 20%;
-	  }
+	}
 }
 
 @media only screen and (min-width: 1350px) and (max-width: 1370px) {
@@ -507,7 +521,7 @@
 
 	}
 
-	
+
 	.profiling-team {
 		margin-left: 30%;
 		width: 100%;
@@ -518,7 +532,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		
+
 		height: 450px;
 	}
 
@@ -529,8 +543,8 @@
 
 	.money-mng img {
 		width: 48%;
-	  }
-	
+	}
+
 }
 
 @media (min-width: 576px) {
@@ -538,22 +552,24 @@
 		margin-bottom: 20px;
 	}
 }
+
 @media (min-width: 500px) and (max-width: 540px) {
 	.money-mng img {
 		width: 40% !important;
 		margin-top: 20% !important;
-	  }
-	  .product-name-container p {
+	}
+
+	.product-name-container p {
 		color: #465A65;
 		font-size: 15px;
 		margin-top: 10% !important;
-	  }
+	}
 }
 
 @media (max-width: 280px) {
 	.money-mng img {
 		margin-top: 100% !important;
-	  }
+	}
 }
 
 
@@ -603,7 +619,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-	
+
 		height: 460px;
 	}
 
@@ -611,22 +627,22 @@
 	.profile_details {
 		margin-bottom: 3.2%;
 	}
-	
-	  .shopkeeper img{
+
+	.shopkeeper img {
 		margin-top: 15px !important;
 		width: 40% !important;
 		height: 50px;
-		 }
-	 
-	 .monexo img{
+	}
+
+	.monexo img {
 		width: 40% !important;
 		height: 65px;
-		 }
-	
-	 .monexo p{
+	}
+
+	.monexo p {
 		margin-top: 12px !important;
-	
-	 }
+
+	}
 }
 
 @media (min-width: 1200px) {
@@ -651,7 +667,7 @@
 	.profiling-team {
 		width: 80%;
 		margin-left: 30%;
-		
+
 	}
 
 	.profile_Photo {
@@ -719,22 +735,15 @@
 	overflow: hidden;
 	-ms-transform: translateX(0);
 	transform: translateX(0);
-	/* -webkit-transform: translateX(0) translateZ(0); */
 	transform: translateX(0) translateZ(0);
 	-webkit-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
 	-webkit-transition: all 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
 	transition: all 0.3s cubic-bezier(0.32, 1.25, 0.375, 1.15);
 	z-index: 10;
 }
 
 .menu.show-nav {
-	/* -webkit-transform: translateX(-300px); */
-	/* -ms-transform: translateX(-300px); */
-	/* transform: translateX(-300px); */
-	/* -webkit-transform: translateX(-300px) tranlateZ(0); */
 	-ms-transform: translateX(-300px) tranlateZ(0);
-	/* transform: translateX(-300px) tranlateZ(0); */
 	-webkit-transform: translate3d(-300px, 0, 0);
 	transform: translate3d(-300px, 0, 0);
 }
@@ -821,7 +830,7 @@
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	-ms-transform: translateX(0);
-	
+
 	-webkit-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
 	-webkit-transition: all 0.4s cubic-bezier(0.32, 1.25, 0.375, 1.15);
@@ -932,7 +941,7 @@
 		text-align: right;
 		font-size: 20px;
 	}
-	
+
 
 }
 
@@ -954,7 +963,7 @@
 	.profiling-team {
 		width: 80%;
 		margin-left: 30%;
-		
+
 	}
 
 	.profile_Photo {
@@ -967,7 +976,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
-		
+
 		height: 480px;
 	}
 
@@ -1103,17 +1112,6 @@
 
 
 
-.money-mng img {
-	width: 45%;
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-.money-mng p {
-	margin-bottom: 0px;
-	color: #465A65;
-}
-
 .partner-txt {
 	position: absolute;
 	top: 0;
@@ -1203,92 +1201,89 @@
 }
 
 
-	.testimonial-slider {
-		position: relative;
-	  }
-	  
-	  .testimonial-slider .user-img {
-		margin-bottom: 20px;
-		height: 96px;
-		width: 96px;
-	  }
-	  
-	  .testimonial-slider h4 {
-		color: #222222;
-		font-weight: 600;
-		font-size: 30px;
-	  }
-	  
-	  .testimonial-slider p {
-		font-size: 20px;
-		padding: 1% 20%;
-	  }
-	
-	  ::ng-deep .testimonial-slider .owl-prev {
-		left: -4rem;
-		background: transparent !important;
-		z-index: 999;
-		display: flex;
-		position: absolute;
-		align-items: center;
-		justify-content: center;
-		/* height: 3rem !important;
-		width: 3rem !important; */
-		width: 60px !important;
-height:10px !important;
-		top: 8rem;
-		box-shadow: none;
-		opacity: 0.5;
-	  }
-	
-	  ::ng-deep .testimonial-slider .owl-prev:hover,
-	::ng-deep .testimonial-slider .owl-next:hover {
-	  opacity: 1;
-	}
-	
-	::ng-deep .testimonial-slider .owl-next {
-	  right: -3rem;
-	  background: transparent !important;
-	  z-index: 999;
-	  display: flex;
-	  position: absolute;
-	  align-items: center;
-	  justify-content: center;
-	  height: 3rem !important;
-	  width: 3rem !important;
-	  top: 8rem;
-	  box-shadow: none;
-	  opacity: 0.5;
-	}
-	
-	::ng-deep .testimonial-slider .owl-nav img {
-		width: 3rem;
-		height: 3rem;
-	  }
-	  
-	  ::ng-deep .testimonial-slider .owl-nav {
-		  transition: all 0.5s ease;
-	  }
-	  
-	  ::ng-deep .testimonial-slider .owl-theme .owl-dots .owl-dot span {
-		background: #465a65;
-		opacity: 0.5;
-		width: 12px;
-		height: 12px;
-		margin-right: 3px;
-		margin-left: 3px;
-	  }
-	  ::ng-deep .testimonial-slider .owl-theme .owl-dots .owl-dot.active span,
-	  .owl-theme .owl-dots .owl-dot:hover span {
-		background: #465a65;
-		opacity: 1;
-	  }
-	 
-	
-	  .testimonial-slider h4 {
-		font-size: 24px;
-	  }
-	
+.testimonial-slider {
+	position: relative;
+}
+
+.testimonial-slider .user-img {
+	margin-bottom: 20px;
+	height: 96px;
+	width: 96px;
+}
+
+.testimonial-slider h4 {
+	color: #222222;
+	font-weight: 600;
+	font-size: 24px;
+
+}
+
+.testimonial-slider p {
+	font-size: 20px;
+	padding: 1% 20%;
+}
+
+::ng-deep .testimonial-slider .owl-prev {
+	left: -4rem;
+	background: transparent !important;
+	z-index: 999;
+	display: flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
+
+	width: 60px !important;
+	height: 10px !important;
+	top: 8rem;
+	box-shadow: none;
+	opacity: 0.5;
+}
+
+::ng-deep .testimonial-slider .owl-prev:hover,
+::ng-deep .testimonial-slider .owl-next:hover {
+	opacity: 1;
+}
+
+::ng-deep .testimonial-slider .owl-next {
+	right: -3rem;
+	background: transparent !important;
+	z-index: 999;
+	display: flex;
+	position: absolute;
+	align-items: center;
+	justify-content: center;
+	height: 3rem !important;
+	width: 3rem !important;
+	top: 8rem;
+	box-shadow: none;
+	opacity: 0.5;
+}
+
+::ng-deep .testimonial-slider .owl-nav img {
+	width: 3rem;
+	height: 3rem;
+}
+
+::ng-deep .testimonial-slider .owl-nav {
+	transition: all 0.5s ease;
+}
+
+::ng-deep .testimonial-slider .owl-theme .owl-dots .owl-dot span {
+	background: #465a65;
+	opacity: 0.5;
+	width: 12px;
+	height: 12px;
+	margin-right: 3px;
+	margin-left: 3px;
+}
+
+::ng-deep .testimonial-slider .owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+	background: #465a65;
+	opacity: 1;
+}
+
+
 ::ng-deep .financial-slider .owl-prev {
 	left: 0px;
 	background: #eef8fa;
@@ -1397,18 +1392,15 @@ height:10px !important;
 	width: 100%;
 }
 
-/* owl-carousel .owl-item img{
-	display:none !important;
-	width:0% !important;
-} */
 
 .owl-carousel .owl-item img {
-	display:none !important;
-	width:0% !important;
+	display: none !important;
+	width: 0% !important;
 }
-.elementor-button-icon{
-	display:block !important;
-	width:12% !important;
+
+.elementor-button-icon {
+	display: block !important;
+	width: 12% !important;
 }
 
 
@@ -1419,7 +1411,7 @@ height:10px !important;
 	}
 
 	.slider-head {
-		
+
 		margin-top: 30px;
 
 
@@ -1489,7 +1481,8 @@ height:10px !important;
 		font-size: 16px;
 		padding: 1% 10%;
 	}
-	.testimonial-slider p{
+
+	.testimonial-slider p {
 		font-size: 16px;
 		padding: 1% 10%;
 	}
@@ -1560,7 +1553,7 @@ height:10px !important;
 		margin-top: -50px;
 	}
 
-	
+
 }
 
 
@@ -1569,7 +1562,7 @@ height:10px !important;
 		font-size: 60px;
 		padding-top: 60px;
 
-		
+
 		font-weight: 900;
 		letter-spacing: 0px;
 		color: #242424;
@@ -1612,10 +1605,10 @@ height:10px !important;
 		width: 95%;
 	}
 
-.hdfcimg {
-	max-height: 42px;
-	
-}
+	.hdfcimg {
+		max-height: 42px;
+
+	}
 
 }
 
@@ -1673,7 +1666,7 @@ height:10px !important;
 	::ng-deep .index-product:hover .owl-nav .owl-prev {
 		opacity: 0.9 !important
 	}
-	
+
 }
 
 @media (min-width: 1200px) {
@@ -1789,15 +1782,15 @@ height:10px !important;
 	.client-img .col img {
 		width: 100%;
 	}
-	
-  .money-mng p {
-    color: #465A65;
-    font-size: 18px;
-  }
 
-  .money-mng img {
-    width: 45%;
-  }
+	.money-mng p {
+		color: #465A65;
+		font-size: 18px;
+	}
+
+	.money-mng img {
+		width: 45%;
+	}
 }
 
 
@@ -1943,18 +1936,10 @@ height:10px !important;
 	}
 
 	.client-img .col img {
-		
+
 		width: 85%;
 	}
 
-	.money-mng p {
-		font-size: 20px;
-	  }
-	
-	  .money-mng img {
-		width: 45%;
-	  }
-	 
 }
 
 /*-------------------1536x864-------------*/
@@ -2021,14 +2006,14 @@ height:10px !important;
 	.client-img .col img {
 		width: 85%;
 	}
-	
-	  .money-mng img {
+
+	.money-mng img {
 		width: 29%;
-	  }
-	
-	  .money-mng p {
+	}
+
+	.money-mng p {
 		font-size: 18px;
-	  }
+	}
 }
 
 @media only screen and (min-width: 1590px) and (max-width: 1610px) {
@@ -2110,8 +2095,7 @@ height:10px !important;
 		text-align: right;
 	}
 
-	.money-mng p
-	{
+	.money-mng p {
 		font-size: 24px;
 	}
 
@@ -2162,6 +2146,7 @@ height:10px !important;
 		margin-top: 20px;
 		margin-bottom: 15px;
 	}
+
 	.mobile-sticky {
 		position: fixed;
 		bottom: 0;
@@ -2169,9 +2154,9 @@ height:10px !important;
 		width: 100%;
 		z-index: 9999;
 		background-color: #ffffff;
-	  }
-	  
-	  
+	}
+
+
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1000px) {
@@ -2218,7 +2203,6 @@ height:10px !important;
 .spinner {
 	height: 60px;
 	display: block;
-	vertical-align: middle;
 	margin: 46vh auto;
 	text-align: center;
 	font-size: 10px;
@@ -2245,9 +2229,10 @@ height:10px !important;
 .spinner .bounce2 {
 	animation-delay: -0.16s;
 }
+
 .mobile-sticky {
-    display: none;
-  }
+	display: none;
+}
 
 @keyframes sk-bouncedelay {
 
@@ -2269,7 +2254,7 @@ height:10px !important;
 
 .phydigitalsection {
 	margin-top: 80px;
-	
+
 }
 
 .phydigitalimg {
@@ -2337,7 +2322,7 @@ height:10px !important;
 .modal-dialog {
 	overflow-y: hidden !important;
 	max-width: 860px !important;
-	
+
 	border-radius: 10px;
 }
 
@@ -2393,7 +2378,7 @@ height:10px !important;
 }
 
 .mop img {
-	
+
 	border-style: solid;
 	border-width: 1px 1px 1px 1px;
 	border-color: #ECECEC;
@@ -2406,18 +2391,18 @@ height:10px !important;
 .main img {
 	width: 80vw;
 	height: 50vh;
-	
+
 	max-height: 100%;
 	max-width: 100%;
 
-	
+
 }
 
 
 
 
 @media (max-width: 575.98px) {
-	
+
 	.phydigitalsection {
 		margin-left: 10px;
 	}
@@ -2490,12 +2475,12 @@ height:10px !important;
 		transform: translateX(0);
 	}
 
-	
+
 
 	.modal-dialog {
 		overflow-y: hidden !important;
 		max-width: 860px !important;
-		
+
 		border-radius: 10px;
 	}
 
@@ -2511,7 +2496,7 @@ height:10px !important;
 
 	}
 
-	
+
 	.closeicon .close {
 		width: 30px;
 		height: 30px;
@@ -2537,7 +2522,7 @@ height:10px !important;
 	}
 
 	.modalpartnerbtn {
-		
+
 		display: block;
 		margin: 15px auto;
 		width: 230px !important;
@@ -2578,11 +2563,11 @@ height:10px !important;
 		transform: translateX(0);
 	}
 
-	
+
 	.modal-dialog {
 		overflow-y: hidden !important;
 		max-width: 860px !important;
-		
+
 		border-radius: 10px;
 	}
 
@@ -2598,7 +2583,7 @@ height:10px !important;
 		padding: 10px 10px 10px 10px;
 	}
 
-	
+
 	.closeicon .close {
 		width: 30px;
 		height: 30px;
@@ -2611,7 +2596,7 @@ height:10px !important;
 	}
 
 	.phydigital_partner_img {
-		
+
 		height: auto;
 		display: block;
 		margin: 0 auto;
@@ -2624,7 +2609,7 @@ height:10px !important;
 	}
 
 	.modalpartnerbtn {
-		
+
 		display: block;
 		margin: 15px auto;
 		width: 230px !important;
@@ -2707,11 +2692,11 @@ height:10px !important;
 		transform: translateX(0);
 	}
 
-	
+
 	.modal-dialog {
 		overflow-y: hidden !important;
 		max-width: 860px !important;
-	
+
 		border-radius: 10px;
 	}
 
@@ -2819,7 +2804,7 @@ height:10px !important;
 
 
 @media only screen and (min-width: 1920px) {
-	
+
 	.phydigitalimg {
 		width: 100% !important;
 	}
