--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -102,9 +102,13 @@
 
           <!-- added by sw -->
            
-            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/insureright">Insureright</a></li>
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/spprd/hospicash?referralid=care">Hospicash</a></li>
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/spprd/wellness?referralid=svaas">Wellness</a></li>
+
+            <!-- <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
             <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
-            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li> -->
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
             <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
@@ -128,10 +132,14 @@
       <div class="collapse" id="Toolscollapse1">
         <div class="card card-body">
           <ul>
-            <!-- added by sw -->
-            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
+
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/insureright">Insureright</a></li>
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/spprd/hospicash?referralid=care">Hospicash</a></li>
+          <li><a target="_blank" rel="noopener" href="http://65.1.237.83:5800/spprd/wellness?referralid=svaas">Wellness</a></li>
+
+            <!-- <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/insureright">Insureright</a></li>
             <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/hospicash?referralid=care">Hospicash</a></li>
-            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li>
+            <li><a target="_blank" rel="noopener" href="https://dev.finizon.com/spprd/wellness?referralid=svaas">Wellness</a></li> -->
             <li style="cursor:pointer;" ><a (click)="insurefitLink()">InsureFit 360</a></li>
             <li style="cursor:pointer;" ><a (click)="shopkeeperLink()">Shopkeeper Insurance</a></li>
             <li style="cursor:pointer;" ><a (click)="monexoLink()">P2P Lending</a></li>
