[shaunak]added: rel=noopener in wealth-home component of commonui to uat

--- a/src/app/views/pages/wealth-home/wealth-home.component.html
+++ b/src/app/views/pages/wealth-home/wealth-home.component.html
@@ -496,7 +496,7 @@
       </div>
 
       <div class="col-lg-3 col-12 col-sm-3">
-        <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/advisor-login">
+        <a style="text-decoration: none;" target="_blank" href="https://wealth.finizon.com/advisor-login" rel="noopener">
           <button class="nav-link btn btn-primary theme-button partnerbtn">PARTNER</button>
         </a>
       </div>
