--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,18 +18,17 @@
             <div class="col-12 hidden-lg hidden-sm order-2 order-lg-1">
               <h4 class="slider-head" [innerHTML]="banners?.heading"></h4>
             </div>
-            
-            
+
+
             <div class="col-lg-8 col-12 order-2 order-lg-1">
               <h4 class="slider-head hidden-xs" [innerHTML]="banners?.heading"></h4>
               <p class="slider-txt" [innerHTML]="banners?.description"></p>
-            
-              
+
+
               <div class="row align-items-center" *ngIf="banners.sortOrder === 1">
                 <div class="col-sm-2">
-                  <button id="partner" 
-                    class="nav-link btn btn-primary theme-button banner_btn" data-toggle="modal" data-target="#bannerpartnerModal"
-                    (click)="partnermodal(banners)">
+                  <button id="partner" class="nav-link btn btn-primary theme-button banner_btn" data-toggle="modal"
+                    data-target="#bannerpartnerModal" (click)="partnermodal(banners)">
                     COME JOIN US
                   </button>
                 </div>
@@ -39,13 +38,12 @@
                   </span>
                 </div>
               </div>
-  
-  
+
+
               <div class="row align-items-center" *ngIf="banners.sortOrder === 2">
                 <div class="col-sm-2">
-                  <button id="partner" 
-                    class="nav-link btn btn-primary theme-button banner_btn" data-toggle="modal" data-target="#bannerpartnerModal"
-                    (click)="customermodal(banners)">
+                  <button id="partner" class="nav-link btn btn-primary theme-button banner_btn" data-toggle="modal"
+                    data-target="#bannerpartnerModal" (click)="customermodal(banners)">
                     COME JOIN US
                   </button>
                 </div>
@@ -56,9 +54,9 @@
                 </div>
               </div>
             </div>
-            
-                 
-  
+
+
+
             <div class="col-lg-4 col-12 order-1 order-lg-2">
               <img src="{{banners.banner}}" alt="slider1" class="w-100 wd90">
             </div>
@@ -95,7 +93,8 @@
                       href="https://diy.ins.finizoninsurance.com/user/home/" rel="noopener">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/J1WexoLfsLAoMrAp7">
+                    <a style="text-decoration: none;" target="_blank" rel="noopener"
+                      href="https://forms.gle/J1WexoLfsLAoMrAp7">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -128,11 +127,12 @@
 
                   <div class="col-lg-8 col-sm-6">
 
-                    <a style="text-decoration: none;" target="_blank"  rel="noopener"
+                    <a style="text-decoration: none;" target="_blank" rel="noopener"
                       href="https://ins.finizoninsurance.com/partner/signup">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                     </a>
-                    <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
+                    <a style="text-decoration: none;" target="_blank" rel="noopener"
+                      href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                       <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                     </a>
 
@@ -167,10 +167,11 @@
               </div>
 
               <div class="col-lg-8 col-sm-6">
-                <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://wealth.finizon.com/client-login">
+                <a style="text-decoration: none;" target="_blank" rel="noopener"
+                  href="https://wealth.finizon.com/client-login">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">SIGN IN</button>
                 </a>
-                <a style="text-decoration: none;" target="_blank"  rel="noopener"
+                <a style="text-decoration: none;" target="_blank" rel="noopener"
                   href="https://docs.google.com/forms/d/e/1FAIpQLSejq8glfhwz7uxHZnSF7Tb6FflIaO7GovsH8Li5fDW76bcZHg/viewform">
                   <button class="nav-link btn btn-primary theme-button modalpartnerbtn">SIGN UP</button>
                 </a>
@@ -250,6 +251,20 @@
           </div>
 
         </div>
+
+
+        <!-- cyber insurance -->
+        <div class="col-6 col-sm-4 col-md-3" *ngFor="let wealth of wealthdataList.slice(3,4)" data-toggle="modal"
+          data-target="#leadModal" (click)="wealthtRouterUrl(wealth)">
+          <div class="money-mng">
+            <img src="{{wealth?.logo}}" alt="l1">
+            <p [innerHTML]="wealth?.name"></p>
+          </div>
+
+        </div>
+
+
+
       </div>
     </div>
 
@@ -314,6 +329,7 @@
           </div>
         </div>
 
+
         <div class="col-4" *ngFor="let wealth of wealthdataList.slice(2 ,3)" data-toggle="modal"
           data-target="#leadModal" (click)="wealthtRouterUrl(wealth)">
           <div class="money-mng monexo">
@@ -325,6 +341,20 @@
             </div>
           </div>
         </div>
+
+
+         <!-- cyber insurance -->
+         <div class="col-4" *ngFor="let wealth of wealthdataList.slice(3,4)" data-toggle="modal" data-target="#leadModal"
+         (click)="wealthtRouterUrl(wealth)">
+         <div class="money-mng monexo">
+           <img src="{{wealth.logo}}" alt="l1">
+         </div>
+         <div class="title-mng">
+           <div class="product-name-container">
+             <p [innerHTML]="wealth?.name"></p>
+           </div>
+         </div>
+       </div>
       </div>
 
     </div>
@@ -475,12 +505,13 @@
                 </div>
 
                 <div class="col-lg-8 col-sm-6">
-                  <a style="text-decoration: none;" target="_blank"  rel="noopener"
+                  <a style="text-decoration: none;" target="_blank" rel="noopener"
                     href="https://ins.finizoninsurance.com/partner/signup">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INSURANCE</button>
                   </a>
 
-                  <a style="text-decoration: none;" target="_blank"  rel="noopener" href="https://forms.gle/t4D9wrpJWNiFVpDS8">
+                  <a style="text-decoration: none;" target="_blank" rel="noopener"
+                    href="https://forms.gle/t4D9wrpJWNiFVpDS8">
                     <button class="nav-link btn btn-primary theme-button modalpartnerbtn">INVESTMENT</button>
                   </a>
 
@@ -545,7 +576,7 @@
                       <div class="name">{{ selectedFounder.name }}</div>
                       <div class="designation">{{ selectedFounder.title }}</div>
                       <div class="bio">{{ selectedFounder.bio }}</div>
-                      <a href="{{selectedFounder.linkedinLink}}" target="_blank"  rel="noopener">
+                      <a href="{{selectedFounder.linkedinLink}}" target="_blank" rel="noopener">
                         <img class="linkedin_logo" [src]="selectedFounder.linkedinImg" alt="LinkedIn Profile">
                       </a>
                     </div>
@@ -689,7 +720,10 @@
             <h3>Grow your family's investment in one place</h3>
           </div>
           <div class="col-lg-3 col-12 col-sm-3">
-            <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto" rel="noopener">Get Started</a>
+            <a href="http://65.1.237.83/" class="nav-link btn btn-primary theme-button m0-auto"
+              rel="noopener">Get Started</a>
+            <!-- <a href="https://uatnw.finizon.com/" class="nav-link btn btn-primary theme-button m0-auto"
+              rel="noopener">Get Started</a> -->
           </div>
         </div>
       </div>
