--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -177,7 +177,7 @@
 .profiling-team {
 	flex: 1;
 	margin-left: 22%;
-	margin-top: -40%;
+	margin-top: -62%;
 
 	border-radius: 15px;
 
@@ -211,7 +211,7 @@
 
 .profile_details {
 	flex: 1;
-	padding: 40px;
+	padding: 32px;
 	align-self: flex-end;
 	margin-bottom: 0.5%;
 }
@@ -696,6 +696,155 @@
 	.container-sm,
 	.container-xl {
 		max-width: 1400px;
+	}
+
+
+	/* =================== */
+	
+	.founding_team_container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	
+	.founding_team_title {
+		color: #465A65;
+		font-family: "Circular Std font", Sans-serif;
+		font-size: 40px;
+		font-weight: 600;
+		margin-top: 8%;
+	}
+	
+	.Banner {
+		margin-top: 7rem !important;
+	}
+	
+	.span_team {
+		color: #00A0AD;
+	}
+	
+	.founder-team {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+	
+	}
+	
+	.founders-container {
+		flex: 1;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-start;
+	}
+	
+	
+	.clkprofile_Photo {
+		flex: 1;
+		width: 100%;
+		height: 100%;
+	
+		filter: brightness(50%);
+		max-width: 100px;
+		max-height: 100px;
+		border-radius: 50%;
+		margin: 10px;
+		background-color: #cdcbcb;
+		border: 1px solid rgb(230, 227, 227);
+		cursor: pointer;
+	}
+	
+	.selected-profile {
+		filter: none;
+	}
+	
+	.profiling-team {
+		flex: 1;
+		margin-left: 30%;
+		margin-top: -62%;
+	
+		border-radius: 15px;
+	
+		background: linear-gradient(to top, #ececec, 20%, #ffff);
+	
+	}
+	
+	.profile {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+	
+		height: 415px;
+	}
+	
+	.profile_Photo {
+		flex: 1;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		object-position: center;
+		max-width: 300px !important;
+		max-height: 300px !important;
+		border-radius: 10px;
+		margin: 0% 0% 0% 5%;
+	}
+	
+	.selected {
+		border: 1px solid black;
+	}
+	
+	.profile_details {
+		flex: 1;
+		padding: 32px;
+		align-self: flex-end;
+		margin-bottom: 0.5%;
+	}
+	
+	.name {
+		color: black;
+		font-family: "Circular Std font", Sans-serif;
+		font-size: 20px;
+		font-weight: 400;
+		line-height: 30px;
+		letter-spacing: 0.4px;
+	}
+	
+	.designation {
+		color: #00A0AD;
+		font-family: "Circular Std font", Sans-serif;
+		font-size: 16px;
+		font-weight: 400;
+		text-transform: none;
+		line-height: 25px;
+		letter-spacing: 0.4px;
+	}
+	
+	.bio {
+		color: black;
+		font-family: "Circular Std font", Sans-serif;
+		font-size: 15px;
+		font-weight: 400;
+		line-height: 27px;
+		letter-spacing: 0.4px;
+	}
+	
+	.linkedin_logo {
+		width: 100%;
+		height: 100%;
+		max-width: 50px;
+		max-height: 50px;
+	
+	
+	}
+	
+	.founder-row-container {
+		display: flex;
+		flex-wrap: nowrap;
+		overflow-x: auto;
+	}
+	
+	.founder-row-container>div {
+		flex: 0 0 auto;
+		margin-right: 10px;
 	}
 }
 
@@ -2038,7 +2187,7 @@
 	.container-md,
 	.container-sm,
 	.container-xl {
-		max-width: 1400px !important;
+		/* max-width: 1400px !important; */
 	}
 
 	.slider-head {
