--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -174,8 +174,10 @@
 
 			<p class="notetext mb-0">AAPT Fintech Private Limited , owner of
 
-				<a href="https://uatnw.finizon.com/" rel="noopener" target="_blank">www.finizon.com</a>
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener" target="_blank">www.finizon.com</a> -->
+				<a href="http://65.1.237.83/" rel="noopener" target="_blank">www.finizon.com</a>
 
+				
 				
 				is an AMFI-registered Mutual Fund Distributor (ARN-232373) of
 
@@ -188,7 +190,10 @@
 
 
 				Investment Manager of the products offered through its platform
-				<a href="https://uatnw.finizon.com/" rel="noopener" target="_blank">(www.Finizon.com)</a>				
+				<!-- <a href="https://uatnw.finizon.com/" rel="noopener" target="_blank">(www.Finizon.com)</a> -->
+				<a href="http://65.1.237.83/" rel="noopener" target="_blank">(www.Finizon.com)</a>
+
+				
 			</p>
 
 			<p class="notetext mb-0">AAPT Insurance Brokers
