[Priyanka]Added: faca screen requirement

--- a/src/app/views/pages/Motor/motor/motor.component.html
+++ b/src/app/views/pages/Motor/motor/motor.component.html
@@ -2,16 +2,17 @@
 
     <div class="image-with-text">
         <div class="text">
-            <div> Motor- Stay Insured</div>
+            <div> Protecting Your Wheels,<br>Shielding Your Wallet</div>
+
             <!-- <div class="black">Finizon's InsureFit 360,<br> Your All-in-One Solution!</div> -->
         </div>
         <!-- <img src="../../../assets/img/web-banner-PNG.png" alt=""> -->
-        <img style="width: 50%; position: relative; left: 14%; "
-            src="../../../assets/img/car-insurance_701961-7537.avif" alt="">
+        <img 
+        src="../../../assets/img/MOTOR-INSURANCE PIC.png" alt="">
 
     </div>
 
-    <div class="Hospicash_content1">
+    <!-- <div class="Hospicash_content1">
         <div class="HospiCashT">Motor insurance – a preventive care plan</div>
         <p class="para"> It is no secret that health has become one of the most important aspects of our lives in this
             modern age. Owing to rising
@@ -25,42 +26,24 @@
             be the next step forward which besides getting you fit and healthy, will keep you insured as well.
         </p>
 
-    </div>
+    </div> -->
 
-    <div class="Hospicash_content2">
+    <!-- <div class="Hospicash_content2">
         <div class="HospiCashT">
             What is Covered under Finizon’s motor insurance?</div>
-        <!-- <p class="para">Finizon’s <b> InsureFit 360 </b>is India’s first ‘outcome-based health and life insurance
-            program’,
-            powered by <b>motor</b>, through which it offers <b>Personal Coaching + Smart Device (motor) + Health & Life
-                Insurance.</b></p> -->
+
         <p class="para">Finizon’s <b> motor insurance </b>is India’s first ‘outcome-based health insurance
             program’,
             powered by <b>motor</b>, through which it offers <b>Personal Coaching + Smart Device (motor) + Health
                 Insurance.</b></p>
-        <!-- <p class="para">
-
-            It will allow you to monitor multiple health parameters, as well as track steps, sleep, calories
-            burned & much more. By adopting healthy habits & behaviours on the motor app, one get a Health Insurance
-            cover for up to ₹5 lakhs (through S.A.F.E model) and Life Insurance cover of up to ₹1 lakh, in partnership
-            with Kotak Mahindra General Insurance and Kotak Mahindra Life Insurance.
-        </p> -->
+ 
         <p class="para">
 
             It will allow you to monitor multiple health parameters, as well as track steps, sleep, calories
             burned & much more. By adopting healthy habits & behaviours on the motor app, one get a Health Insurance
             cover for up to ₹5 lakhs (through S.A.F.E model) with Care Health Insurance.
         </p>
-        <!-- <p class="para">
-            <b>How does it work? Play it SAFE</b>
-            <br>
-            The SAFE model (Sedentary, Active, Fit & Elite) consists of levels within the motor Ecosystem. Every motor
-            player (user) that activates their plan starts their health journey on the lowest tier of the SAFE score
-            i.e., Sedentary. At this level, player is eligible for a Health Insurance cover of ₹1 Lakh & a Life
-            Insurance cover of ₹1 Lakh. By leading a healthy lifestyle and engaging on the motor App, players can
-            improve their SAFE score and progress to Active, Fit and Elite to increase the value of their health
-            insurance cover up to ₹5 lakhs.
-        </p> -->
+     
         <p class="para">
             <b>How does it work? Play it SAFE</b>
             <br>
@@ -76,15 +59,14 @@
         </p>
         <div class="safesore">
 
-            <!-- <img src="../../../assets/img/insure.png" alt=""> -->
             <img src="../../../assets/img/Insurance+Card.png" alt="">
 
 
 
         </div>
-    </div>
+    </div> -->
 
-    <div class="wrapper">
+    <!-- <div class="wrapper">
         <div class="product-details">
             <div class="HospiCashT_List">Product details</div>
             <ul class="list-style">
@@ -96,7 +78,6 @@
                 <li>Multiple Exercise Modes</li>
                 <li>Steps counting</li>
                 <li>Women Care</li>
-                <!-- <li>Life Insurance of INR 1 Lakhs</li> -->
                 <li>Health insurance upto INR 5 Lakhs*
                     <ul style="list-style: none;">
                         <li> In-Patient Treatment covered</li>
@@ -163,26 +144,22 @@
                 </ul>
 
             </div>
-            <!-- <div class="SV2-A"><img src="../../../assets/img/SmartVital-2.png" alt=""></div> -->
             <div class="SV2-A"><img src="../../../assets/img/Insurance-+.png" alt=""></div>
 
         </div>
-    </div>
+    </div> -->
 
 
-    <div style="position: relative; bottom: 90px;">
+    <div >
         <div class="Hospicash_content2">
-            <div class="HospiCashT">Options Available with
+            <!-- <div class="HospiCashT">Options Available with
                 <img class="optionimg" src="../../../assets/img/motorSquareLogo-style.png" alt="">
 
-            </div>
+            </div> -->
 
-            <!-- <div class="motor"><b> motor INSURE+</b> with Smart Vital 2.0 and 12 months
-            personal coaching subscription for <b>INR 10,999</b> .</div>
-        </div> -->
+          
 
-            <div class="motor"><b> Motor INSURE+</b> with Smart Vital 2.0 Max and 12 months
-                personal coaching subscription for <b>INR 12,999</b>.</div>
+            <div class="motor">Lets kickstart with your Motor Journey.</div>
         </div>
 
         <div class="apply-now">
@@ -283,7 +260,7 @@
 
                     <div class="form-column">
                         <label for="customer-mobile  custom-width" class="cust_mob">Falca Unique Id *</label>
-                        <input style="width: 49.5%;" type="text" formControlName="agentCode" class="form-control" name="agentCode"
+                        <input type="text" formControlName="agentCode" class="form-control Falca_Unique_Id" name="agentCode"
                             placeholder="Enter your unique id" minlength="12" maxlength='13'>
                     </div>
                 </div>
@@ -298,7 +275,7 @@
             </form>
         </div>
 
-        <!-- <div class="Apply_now_note">On clicking the button above, you will be redirected to a 3rd party website.</div> -->
+        <div class="Apply_now_note">On clicking the button above, you will be redirected to a 3rd party website.</div>
 
     </div>
 </div>
