--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   src: url(assets/fonts/Dax.ttf);
 }
 
+
 .body-color {
   background-image: linear-gradient(#BFE6EC 30%, #fff 80%, #fff 100%);
   height: 100vh;
@@ -209,6 +210,21 @@ p {
   font-size: 14px;
 }
 
+
+.mat-mdc-text-field-wrapper {
+	height: 60px !important;
+	width:100% !important;
+	background-color: #fff !important;
+	border-radius: 5px !important;
+	}
+
+.mat-form-field-appearance-outline .mat-form-field-flex {
+    padding:0 !important;
+}
+.mat-form-field {
+    width: 100%;
+    padding: 10px 0;
+}
 .slick-arrow img {
   width: 50%;
   opacity: 0.7;
